[package]
name = "new-issue-monitor-airtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-flows = "0.1.9"
chrono = "0.4.24"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
http_req_wasi = "0.10.2"
log = "0.4.19"
schedule-flows = "0.2.2"
serde = {version ="1.0.159", features = ["derive"]}
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
serde_with = "3.0.0"
store-flows = "0.3.1"
tokio_wasi = {version = "1.25.2", features = ["full"]}
